--- a/labs/labworks/templates/base.html
+++ b/labs/labworks/templates/base.html
@@ -1,11 +1,11 @@
 <!-- Author: Anton Kablov  -->
 <!doctype html>
+{% load static %}
 <html>
 <head>
 <title>{% block title %} Система учета лабораторных работ {% endblock %}</title>
-{% load staticfiles %}
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link href="{% static "labworks/style.css" %}" rel="stylesheet" type="text/css" />
+<link href="{% static "labworks/style.css" %}" rel="stylesheet"/>
 <link rel="stylesheet" href="{% static "labworks/jquery-ui.css" %}">
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -30,7 +30,36 @@
 <body>
 
 <div id="main">
-    	<div id="header">
+    <div id="header">
+        <div class="logo">
+        <a href="" class="">
+            LABWORKS
+        </a>
+        </div>
+        {% if user.is_authenticated %}
+        <div class="react-container">
+            <div id="navigation">
+                <a href="" class="nav-link">
+                    <div class="nav-block">NAV 1</div>
+                </a>
+                <a href="" class="nav-link">
+                    <div class="nav-block">NAV 2</div>
+                </a>
+                <a href="" class="nav-link">
+                    <div class="nav-block">NAV 3</div>
+                </a>
+                <a href="" class="nav-link">
+                    <div class="nav-block">NAV 4</div>
+                </a>
+                
+            </div>
+            <div class="user">
+                User
+            </div>
+        </div>
+        {% endif %}
+    </div>
+    	<!-- <div id="header">
         	<p id="header_text">LABWORKS</p>
        	</div>
         
@@ -40,8 +69,8 @@
         		<a href="{% url 'password_change' %}">Смена пароля</a>
         		<a href="/logout">Выйти</a>
         	</nav>
-        	{% endif %}
         	<a href="/">Главная</a>
+        	{% endif %}
         	{% if user.is_teacher %}
         	<a href="{% url 'teacher_labworks' %}">Мои работы</a>
             <a href="{% url 'teacher_categories' %}">Категории</a>
@@ -49,7 +78,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'archive' %}">Архив</a>
             {% endif %}
-        </div>
+        </div> -->
         
         <div id="content">
         	
