--- a/static/labworks/style.css
+++ b/static/labworks/style.css
@@ -1,72 +1,170 @@
 @charset "utf-8";
 /* CSS Document */
+
+*{
+	margin: 0;
+	padding: 0;
+}
+
+/* base.html */
 #main{
 	display:block;
-	width: 1024px;
+	width: 100vw;
 	min-height:200px;
-	margin: 25px auto;
-	border: solid 1px #000; 
-	}
+}
+
 #header{
-	background: #7db9e8; /* Old browsers */
-	background: -moz-linear-gradient(-45deg,  #7db9e8 0%, #1e5799 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#7db9e8), color-stop(100%,#1e5799)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(-45deg,  #7db9e8 0%,#1e5799 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(-45deg,  #7db9e8 0%,#1e5799 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(-45deg,  #7db9e8 0%,#1e5799 100%); /* IE10+ */
-	background: linear-gradient(135deg,  #7db9e8 0%,#1e5799 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799',GradientType=1 ); /* IE6-9 fallback on 			horizontal gradient */
-	display:block;
-	height:150px;
-	border-bottom: 1px solid #000;
-	position:relative;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	background-color: rgba(51, 51, 204, 1);
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
+}
+
+.logo{
+	height: 10vh;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: flex-end;
+	-ms-align-items: center;
+	align-items: center;
+	padding-right: 2vw;
 	}
-#header_text{
-	display:block;
-	margin-top:70px;
-	margin-right: 30px;
-	float:right;
+
+.logo > a{
 	text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.8);
 	color: #FFFFFF;
-	font-size: 50px;
-	}	 
-/*меню*/
+	font-size: 40px;
+	text-decoration: none;
+}
+
+.react-container{
+	width: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	border-top: solid 1px black;
+}
+
 #navigation{
-	background: rgb(255,255,255); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(198,198,198,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(198,198,198,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(198,198,198,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(198,198,198,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(198,198,198,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(198,198,198,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c6c6c6',GradientType=0 ); /* IE6-9 */
-	height:28px;
-	border-bottom:solid 1px #000;
-	padding-left:30px;
-	}
-#navigation a{
-	color:#000000;
-	display: block;
-  	position: relative;
-  	margin: 5px;
-  	border-right: dashed 1px #000;
-  	padding-right: 10px;
-  	font-weight: 600;
-  	text-transform: capitalize;
-  	float: left;
-	text-decoration:none;
-	}
-#navigation a:last-child{
-	border:none;
-	}
-#navigation a:hover{
-	text-decoration:underline;
-	}
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	height: 50px;
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: start;
+	padding-left: 2vw;
+	width: 70vw;
+}
+
+.nav-link{
+	width: 10%;
+	height: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	-ms-align-items: center;
+	align-items: center;
+	border-left: solid black 1px;
+	text-decoration: none;
+	color: #000;
+}
+
+.nav-link:last-child{
+	border-right: solid black 1px;	
+}
+
+.nav-link:hover{
+	background-color: rgba(0, 0, 255, 1);
+}
+
+
+/* login.html */
 #content{
-	display:block;
+	/* display:block;
 	width:inherit;
-	min-height:200px;
+	min-height:200px; */
+	height: 90vh;
+	background: linear-gradient(rgba(102, 0, 255, 1), rgba(238, 207, 255, 1));
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	-ms-align-items: center;
+	align-items: center;
+}
+
+
+.login-form{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
+	background-color: rgba(81, 167, 255, .7);
+	width: 25vw;
+	justify-content: center;
+	-ms-align-items: flex-start;
+	align-items: flex-start;
+	height: 150px;
+	-webkit-box-shadow: 5px 5px 4px 2px grey;
+	box-shadow: 5px 5px 4px 2px grey;
+	padding-left: 1vw;
+}
+
+#id_username, #id_password{
+	width: 15vw;
+	height: 20px;
+	background: rgba(0, 0, 0, 0);
+	border: 0;
+	border-bottom: solid 1px rgba(255, 255, 255, 1);
+}
+
+#id_username:focus, #id_password:focus{
+	outline: none;
+}
+
+input[type=submit][value=Войти]{
+	margin-top: 10px;
+	margin-bottom: 5px;
+	margin-right: 15px;
+	background: rgba(61, 85, 204, 1);
+	min-width: 50px;
+	border: 0;
+	border-radius: 3px;
+	color: white;
+	height: 20px;
 	}
+
+.login > a{
+	color: rgba(61, 85, 204, 1);
+}
+
 	
 /*список дисциплин*/
 #lab_works{
@@ -158,7 +256,7 @@
 	margin: 75px auto;	
 	}
 	
-input[type=submit], #button_cont_a{
+#button_cont_a{
 	padding: 1px 15px;
 	margin: 3px 4px;
 	display: inline-block;
@@ -181,7 +279,7 @@ input[type=submit], #button_cont_a{
 	-o-box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.25), inset 1px 1px 0px 0px rgba(255, 255, 255, 0.25);
 	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.50);
 	}
-input[type=submit]:hover,#button_cont_a:hover{
+#button_cont_a:hover{
 	background: linear-gradient(top, #5aafff 0%, #4095ff 100%);
 	background: -moz-linear-gradient(top, #5aafff 0%, #4095ff 100%);
 	background: -webkit-linear-gradient(top, #5aafff 0%, #4095ff 100%);
@@ -197,7 +295,7 @@ input[type=submit]:hover,#button_cont_a:hover{
 	-o-transition: all 150ms linear;
 	transition: all 150ms linear;
 	}
-input[type=submit]:active,#button_cont_a:active{
+#button_cont_a:active{
 	opacity:0.8;
 }#form_add,#form_edit{
 	display:block;
