--- a/labworks/labs/labworks/templates/login.html
+++ b/labworks/labs/labworks/templates/login.html
@@ -6,22 +6,7 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form action="">
-    <div class="login-form">
-        {% csrf_token %}
-        {{ form.username.label_tag }}
-        {{ form.username }}
-        {{ form.password.label_tag }}
-        {{ form.password }}
-        <div class="login">    
-            <input type="submit" value="Войти" />
-            <input type="hidden" name="next" value="{{ next }}" /> 
-            <a href="{% url 'password_reset' %}">Забыли пароль?</a>
-        </div>
-    </div>
-</form>
-
-<!-- <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
 {% csrf_token %}
 <table>
 <tr>
@@ -38,6 +23,6 @@
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-<p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p> -->
+<p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
 
 {% endblock %}
