feat: add html and css for black orange text

--- a/labworks/labs/labworks/templates/base.html
+++ b/labworks/labs/labworks/templates/base.html
@@ -31,7 +31,9 @@
 
 <div id="main">
     	<div id="header">
-        	<p id="header_text">LABWORKS</p>
+        	<p id="header_text">
+				<span class="lab">LAB</span><span class="works">WORKS</span> <!-- remove span's for old html -->
+			</p>
        	</div>
         
         <div id="navigation">
