feat: add hub style (hub.css)

--- a/labworks/labs/labworks/templates/base.html
+++ b/labworks/labs/labworks/templates/base.html
@@ -6,6 +6,7 @@
 {% load staticfiles %}
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="{% static "labworks/style.css" %}" rel="stylesheet" type="text/css" />
+<link href="{% static "labworks/hub.css" %}" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="{% static "labworks/jquery-ui.css" %}">
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
