--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -24,25 +24,28 @@ body {
 
 #header_text {
     display: flex;
+    font-size: 45px;
 }
 
 .lab, .works {
 	display: block;
-	height: 70px;
-	text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+	height: 60px;
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    font-weight: bold;
 }
 
 .lab {
-	margin-right: 7px;
+	margin-right: 3px;
 	color: white;
 }
 
 .works {
-	padding-left: 7px;
-	padding-right: 7px;
+	padding-left: 5px;
+	padding-right: 5px;
 	background: #ffa31a;
 	color: #000;
-	border-radius: 5px;
+    border-radius: 5px;
+    letter-spacing: -2px;
 }
 
 
@@ -92,7 +95,6 @@ input[type=submit], #button_cont_a {
     background: #ffa31a;
     border-radius: 5px;
     border: none;
-    width: 100%;
     height: 26px;
     padding: 6px 10px;
 }
