--- a/labworks/labs/labworks/templates/base.html
+++ b/labworks/labs/labworks/templates/base.html
@@ -14,18 +14,6 @@
 {% block css %}
 {% endblock %}
 
-<style type="text/css">
-	
-	#navigation {
-		position: relative;
-	}
-	
-	nav {
-		position: absolute;
-		right: 20px;
-	}
-</style>
-
 </head>
 
 <body>
@@ -43,15 +31,17 @@
         		<a href="{% url 'password_change' %}">Смена пароля</a>
         		<a href="/logout">Выйти</a>
         	</nav>
-        	{% endif %}
-        	<a href="/">Главная</a>
-        	{% if user.is_teacher %}
-        	<a href="{% url 'teacher_labworks' %}">Мои работы</a>
-            <a href="{% url 'teacher_categories' %}">Категории</a>
-        	{% endif %}
-            {% if user.is_authenticated %}
-                <a href="{% url 'archive' %}">Архив</a>
-            {% endif %}
+			{% endif %}
+			<nav>
+				<a href="/">Главная</a>
+				{% if user.is_teacher %}
+				<a href="{% url 'teacher_labworks' %}">Мои работы</a>
+				<a href="{% url 'teacher_categories' %}">Категории</a>
+				{% endif %}
+				{% if user.is_authenticated %}
+					<a href="{% url 'archive' %}">Архив</a>
+				{% endif %}
+			</nav>
         </div>
         
         <div id="content">
