--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -8,6 +8,7 @@
 
 body {
     width: 100vw;
+    min-height: 100vh;
 }
 
 #main {
@@ -54,7 +55,7 @@ body {
     background: #1b1b1b;
     border-bottom: 3px solid #252525;
     display: flex;
-    flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 #navigation a {
@@ -87,6 +88,13 @@ body {
     background: #363636;
     color: #cacaca;
     border-radius: 5px;
+    height: 20px;
+    width: 100%;
+    max-width: 170px;
+}
+
+#content input:focus {
+    outline: none;
 }
 
 input[type=submit], #button_cont_a {
@@ -100,7 +108,7 @@ input[type=submit], #button_cont_a {
     padding: 6px 10px;
 }
 
-input[type=submit]:hover, #button_cont_a:hover{
+input[type=submit]:hover, #button_cont_a:hover {
 	background: #ffa31a;
 	background: #ffa31a;
 	background: #ffa31a;
@@ -115,6 +123,14 @@ input[type=submit]:hover, #button_cont_a:hover{
 	-ms-transition: all 150ms linear;
 	-o-transition: all 150ms linear;
 	transition: all 150ms linear;
+}
+
+input[type=file] {
+    opacity: 0;
+}
+
+input[type=file]::before {
+    content: "Выберите файл ";
 }
 
 #lab_works {
