fix: I hate input type file

--- a/labworks/labs/labworks/templates/teacher_labworks.html
+++ b/labworks/labs/labworks/templates/teacher_labworks.html
@@ -3,14 +3,14 @@
 {% block content %}
 
 <form action="{% url 'teacher_labworks' %}" method="POST" enctype="multipart/form-data">
-<table>
+<table class="teacher-labs">
 {{ form.as_table }}
 </table>
 {% csrf_token  %}
 <input type="submit" value="Добавить работу">
 </form>
 
-<table width="100%">
+<table width="100%" class="labs-and-categories">
 <tr>
     <th width="50%">Работы</th>
     <th width="50%">Категории</th>
@@ -18,17 +18,21 @@
 <tr>
 
 <td width="50%">
-<ul>
+<ul class="list list-labs">
 {% for lab in labworks %}
-	<li><a href="{% url 'teacher_labwork_update' lab.id %}">{{lab}}</a></li>
+	<li class="list-labs__item labs-and-categories__item">
+        <a href="{% url 'teacher_labwork_update' lab.id %}">{{lab}}</a>
+    </li>
 {% endfor %}
 </ul>
 </td>
 
 <td width="50%">
-    <ul>
+    <ul class="list list-categories">
     {% for category in categories %}
-        <li><a href="{% url 'teacher_category_labworks' category.pk %}">{{ category }}</a></li>
+        <li class="list-categories__item labs-and-categories__item">
+            <a href="{% url 'teacher_category_labworks' category.pk %}">{{ category }}</a>
+        </li>
     {% endfor %}
     </ul>
 </td>
