--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -8,6 +8,7 @@
 
 body {
     width: 100vw;
+    max-width: 100%;
     min-height: 100vh;
 }
 
@@ -29,10 +30,12 @@ body {
 }
 
 .lab, .works {
-	display: block;
+    display: flex;
+    align-items: center;
 	height: 60px;
     text-shadow: 0 0 0 rgba(0, 0, 0, 0);
     font-weight: bold;
+
 }
 
 .lab {
@@ -83,7 +86,7 @@ body {
     color: white;
 }
 
-.login-form__username__input, .login-form__password__input, #content input {
+.login-form__username__input, .login-form__password__input, #content input[type=text] {
     border: none;
     background: #363636;
     color: #cacaca;
@@ -125,15 +128,27 @@ input[type=submit]:hover, #button_cont_a:hover {
 	transition: all 150ms linear;
 }
 
-input[type=file] {
-    opacity: 0;
+#id_file::-webkit-file-upload-button {
+    visibility: hidden;
 }
-
-input[type=file]::before {
-    content: "Выберите файл ";
+#id_file::before {
+    content: 'Select some files';
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
 }
-
-#lab_works {
-    margin: 0;
-    color: white;
+#id_file:hover::before {
+border-color: black;
+}
+#id_file:active::before {
+background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
