--- a/labworks/labs/labworks/templates/teacher_labworks.html
+++ b/labworks/labs/labworks/templates/teacher_labworks.html
@@ -11,7 +11,7 @@
 </form> -->
 
 <form action="{% url 'teacher_labworks' %}" method="POST" enctype="multipart/form-data">
-    {{ form.as_ul }}
+    {{ form.as_p }}
     {% csrf_token  %}
     <input type="submit" value="Добавить работу">
 </form>
