--- a/labworks/labs/labworks/templates/teacher_labworks.html
+++ b/labworks/labs/labworks/templates/teacher_labworks.html
@@ -10,7 +10,7 @@
     <input type="submit" value="Добавить работу">
 </form> -->
 
-<form action="{% url 'teacher_labworks' %}" method="POST" enctype="multipart/form-data">
+<form action="{% url 'teacher_labworks' %}" method="POST" enctype="multipart/form-data" class="form-add-labs">
     {{ form.as_p }}
     {% csrf_token  %}
     <input type="submit" value="Добавить работу">
