--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -148,6 +148,8 @@ input[type=submit]:hover, #button_cont_a:hover {
 
 label[for="id_no_check"] {
     position: relative;
+    opacity: 0;
+    z-index: -1;
 }
 
 label[for="id_no_check"]::before {
