--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -146,47 +146,16 @@ input[type=submit]:hover, #button_cont_a:hover {
     height: 100%;
 }
 
-input#id_no_check {
-    position: relative;
-    cursor: pointer;
+#id_no_check {
+    width: 80px;
+    height: 23px;
+    transition: box-shadow 0.3s ease-in;
 }
 
-input#id_no_check::before {
-    content: '';
-    cursor: pointer;
-    display: block;
-    position: absolute;
-    width: 13px;
-    height: 13px;
-    top: 3.2px;
-    right: -12px;
-    opacity: 1;
-    z-index: 0;
-    background: #363636;
+#id_no_check:active:disabled {
+    box-shadow: 30px 0 0 0 rgba(0,0,0,.3) inset;
 }
 
-input#id_no_check::after {
-    content: '';
-    cursor: pointer;
-    display: block;
-    position: absolute;
-    width: 13px;
-    height: 13px;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    z-index: -1;
-    background:blue;
-}
-
-input#id_no_check:disabled input#id_no_check::before, 
-input#id_no_check:checked input#id_no_check::after {
-    opacity: 1;
-    z-index: 0;
-}
-
-input#id_no_check:disabled input#id_no_check::after, 
-input#id_no_check:checked input#id_no_check::before {
-    opacity: 0;
-    z-index: -1;
+#id_no_check:active:checked {
+    box-shadow: 30px 0 0 0 rgba(19, 198, 69, 0.81) inset;
 }
