--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -153,9 +153,9 @@ input[type=submit]:hover, #button_cont_a:hover {
 }
 
 #id_no_check:disabled {
-    box-shadow: 80px 0 0 0 rgba(0,0,0,.3) inset;
+    box-shadow: 80px 0 0 0 rgba(0,0,0,1) inset;
 }
 
 #id_no_check:checked {
-    box-shadow: 80px 0 0 0 rgba(19, 198, 69, 0.81) inset;
+    box-shadow: 80px 0 0 0 rgba(19, 198, 69, 1) inset;
 }
