--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -149,10 +149,30 @@ input[type=submit]:hover, #button_cont_a:hover {
 #id_no_check {
     width: 80px;
     height: 23px;
-    box-shadow: 80px 0 0 0 rgba(0,0,0,1) inset;
+    box-shadow: 80px 0 0 0 rgb(204, 13, 13);
     transition: box-shadow 0.3s ease-in;
 }
 
 #id_no_check:checked {
-    box-shadow: 80px 0 0 0 rgba(19, 198, 69, 1) inset;
+    box-shadow: 80px 0 0 0 rgb(19, 198, 69);
+}
+
+#id_file::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
+#id_file::before {
+    content: 'Select some files';
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
 }
