--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -15,7 +15,7 @@ body {
 #main {
     width: 100%;
     height: 100%;
-    background: #000;
+    /* background: #000; */
     margin: 0;
 }
 
@@ -149,30 +149,40 @@ input[type=submit]:hover, #button_cont_a:hover {
 #id_no_check {
     width: 80px;
     height: 23px;
-    box-shadow: 80px 0 0 0 rgb(204, 13, 13);
+    box-shadow: inset 80px 0 0 0 rgb(204, 13, 13);
     transition: box-shadow 0.3s ease-in;
 }
 
 #id_no_check:checked {
-    box-shadow: 80px 0 0 0 rgb(19, 198, 69);
+    box-shadow: inset 80px 0 0 0 rgb(19, 198, 69);
+}
+
+#id_file {
+    color: #000;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
 #id_file::-webkit-file-upload-button {
     visibility: hidden;
+    
 }
 
 #id_file::before {
-    content: 'Select some files';
-    display: inline-block;
-    background: linear-gradient(top, #f9f9f9, #e3e3e3);
-    border: 1px solid #999;
-    border-radius: 3px;
-    padding: 5px 8px;
-    outline: none;
-    white-space: nowrap;
-    -webkit-user-select: none;
-    cursor: pointer;
-    text-shadow: 1px 1px #fff;
-    font-weight: 700;
-    font-size: 10pt;
+    content: 'Upload files';
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #ffa31a;
+    transition: background 0.3s ease-in;
+    width: 100px;
+    height: 50px;
+    color: #363636;
+}
+
+
+#id_file:hover #id_file::before {
+    background: #7d0707;
 }
