--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -15,7 +15,7 @@ body {
 #main {
     width: 100%;
     height: 100%;
-    /* background: #000; */
+    background: #000;
     margin: 0;
 }
 
@@ -27,6 +27,7 @@ body {
 #header_text {
     display: flex;
     font-size: 45px;
+    margin-right: 10px;
 }
 
 .lab, .works {
@@ -136,7 +137,8 @@ input[type=submit]:hover, #button_cont_a:hover {
 }
 
 .form-add-labs p label {
-    width: 180px;
+    max-width: 180px;
+    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -172,17 +174,30 @@ input[type=submit]:hover, #button_cont_a:hover {
 #id_file::before {
     content: 'Upload files';
     display: flex;
+    justify-content: center;
+    align-items: center;
+
     position: absolute;
     top: 0;
     left: 0;
     background: #ffa31a;
-    transition: background 0.3s ease-in;
     width: 100px;
     height: 50px;
     color: #363636;
 }
 
 
-#id_file:hover #id_file::before {
+#id_file:hover::before {
+    transition: background 0.3s ease-in;
     background: #7d0707;
+}
+
+.form-add-labs select {
+    display: flex;
+    width: 100%;
+    max-width: 310px;
+    background: black;
+    color: white;
+    min-height: 23px;
+    height: 100%;
 }
