--- a/labworks/labs/labworks/templates/teacher_labworks.html
+++ b/labworks/labs/labworks/templates/teacher_labworks.html
@@ -61,7 +61,7 @@
     <section class="categories categories-section">
         <h2 class="categories__title">Категории</h2>
         <ul class="categories__list">
-            {% for lab in labworks %}
+            {% for category in categories %}
             <li class="categories__list__item labs-and-categories__item">
                 <a href="{% url 'teacher_category_labworks' category.pk %}">{{ category }}</a>
             </li>
