--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -17,6 +17,7 @@ body {
     height: 100%;
     background: #000;
     margin: 0;
+    min-height: 100vh;
 }
 
 #header {
@@ -229,7 +230,12 @@ input[type=submit]:hover, #button_cont_a:hover {
     color: white;
 }
 
-.labs__checkbox:disabled ~ .labs__list, .categories__list {
+.labs__checkbox {
+    opacity: 0;
+    z-index: -1;
+}
+
+.labs__list, .categories__list {
     display: none;
     position: relative;
     width: 100%;
@@ -240,6 +246,8 @@ input[type=submit]:hover, #button_cont_a:hover {
     display: flex;
 }
 
+
+
 .labs__list .labs__list__item {
     position: absolute;
     left: 0;
@@ -249,7 +257,6 @@ input[type=submit]:hover, #button_cont_a:hover {
 .labs__checkbox:checked + .labs__list .labs__list__item {
     position: relative;
 }
-
 
 .labs__list__item > a, .categories__list__item > a {
     top: 0;
