--- a/labworks/static/labworks/hub.css
+++ b/labworks/static/labworks/hub.css
@@ -15,7 +15,7 @@ body {
 #main {
     width: 100%;
     height: 100%;
-    background: #000;
+    background: rgba(0, 0, 0, 0.687);
     margin: 0;
     min-height: 100vh;
 }
@@ -165,11 +165,11 @@ input[type=submit]:hover, #button_cont_a:hover {
     display: flex;
     align-items: center;
     position: relative;
+    color: white;
 }
 
 #id_file::-webkit-file-upload-button {
     visibility: hidden;
-    
 }
 
 #id_file::before {
@@ -242,20 +242,19 @@ input[type=submit]:hover, #button_cont_a:hover {
     flex-direction: column;
 }
 
-#labs__checkbox:checked + .labs__list {
-    display: flex;
-}
-
-
-
 .labs__list .labs__list__item {
     position: absolute;
     left: 0;
     top: 0;
 }
 
+#labs__checkbox:checked + .labs__list {
+    display: flex;
+}
+
 #labs__checkbox:checked + .labs__list .labs__list__item {
-    position: relative;
+    transition: position .3s ease-in-out;
+    position: relative; 
 }
 
 .labs__list__item > a, .categories__list__item > a {
