add url plans and plans template

--- a/labs/labworks/templates/base.html
+++ b/labs/labworks/templates/base.html
@@ -42,6 +42,7 @@
         	</nav>
         	{% endif %}
         	<a href="/">Главная</a>
+			<a href="{% url 'plans' %}">Планы</a>
         	{% if user.is_teacher %}
         	<a href="{% url 'teacher_labworks' %}">Мои работы</a>
             <a href="{% url 'teacher_categories' %}">Категории</a>
