feat: add plans

--- a/labs/labworks/templates/plans.html
+++ b/labs/labworks/templates/plans.html
@@ -2,6 +2,28 @@
 
 {% block content %}
 
-Test plans
+<ul class="plans">
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/Uch_plan_09.02.06_3-10_2018.pdf">Учебный план. 09.02.06. ОФ. 3г10м. 2018</a>
+    </li>
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/Uch_plan_09.02.06_2-10_2019.pdf">Учебный план. 09.02.06. ОФ. 2г10м. 2019</a>
+    </li>
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/Uch_plan_09.02.06_3-10_2019.pdf">Учебный план. 09.02.06. ОФ. 3г10м. 2019</a>
+    </li>
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/Uch_plan_09.02.06_2-10_2020.pdf">Учебный план. 09.02.06. ОФ. 2г10м. 2020</a>
+    </li>
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/Uch_plan_09.02.06_3-10_2020.pdf">Учебный план. 09.02.06. ОФ. 3г10м. 2020</a>
+    </li>
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/090206-up-3g10m-of-2021.pdf">Учебный план. 09.02.06. ОФ. 3г10м. 2021</a>
+    </li>
+    <li class="plans__list">
+        <a href="https://www.rea.ru/ru/org/colleges/instrcol/Documents/ychebnie-plani/090206-up-2g10m-of-2021.pdf">Учебный план. 09.02.06. ОФ. 2г10м. 2021</a>
+    </li>
+</ul>
 
 {% endblock %}
