--- a/labs/labworks/templates/base.html
+++ b/labs/labworks/templates/base.html
@@ -50,6 +50,7 @@
                 <a href="{% url 'archive' %}">Архив</a>
             {% endif %}
 			<a href="{% url 'plans' %}">Планы</a>
+			<a href="{% url 'timetable' %}">Расписание</a>
         </div>
         
         <div id="content">
